minor bug correction

--- a/Tensor_factorization.ipynb
+++ b/Tensor_factorization.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "id": "05aa0255-c54e-41f6-9f62-ef2cfc2cad3e",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
     "fig = plt.figure(figsize=(8,4))\n",
     "fig.patch.set_alpha(0)\n",
     "x_range = range(1, 10)\n",
-    "plt.plot([mean_CC(R) for R in x_range], marker='o')\n",
+    "plt.plot(x_range, [mean_CC(R) for R in x_range], marker='o')\n",
     "plt.show()"
    ]
   },
@@ -211,7 +211,7 @@
     "fig = plt.figure(figsize=(8,4))\n",
     "fig.patch.set_alpha(0)\n",
     "x_range = range(1, 150, 8)\n",
-    "plt.plot([mean_CC(R) for R in x_range], marker='o')\n",
+    "plt.plot(x_range, [mean_CC(R) for R in x_range], marker='o')\n",
     "plt.show()"
    ]
   }
