Plotted the first parallel factor

--- a/Get_OSM_Data.ipynb
+++ b/Get_OSM_Data.ipynb
@@ -148,7 +148,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "b0ec9747-294c-4724-b423-314fb44479c8",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
